# pw_linear_programming_optimization

./: Projekt numer 1 Szymon Kwiecinski.md  README.md  pyproject.toml
src/: app.py
